--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+/* General Styles */
+
+* {
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: linear-gradient(to right, #28f39a, #098baf);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Form General Styles */
+.btn-color {
+  background: linear-gradient(to right, #000fe6, #33e0ff);
+  color: #fff;
+  border: none;
+  transition: 0.5s background;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-color:hover {
+  background: linear-gradient(to right,  #010cad, #2397ac);
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control:focus {
+  border:  1px solid #28f39a !important;
+  box-shadow: 0 0 0 .2rem rgba(0, 123, 255, 0) !important;
+  
 }
